navbar collapse margin problem with h1 solved

--- a/amazing/css/style.css
+++ b/amazing/css/style.css
@@ -38,7 +38,7 @@ body{
     width: 80px;
     height: 80px;
     background-color: black;
-    line-height: 1.37;       
+    line-height: 1.37;      
 }
 
 .navbar-dark .navbar-toggler-icon {
@@ -53,17 +53,27 @@ body{
 margin-left: 7px;
 cursor: pointer;
 user-select: none;
-text-transform: uppercase;
+text-transform: uppercase; 
+}
+
+.collapsing{
+    transition: 0.6s;
+}
+.show{
+    margin-bottom: -108.267px;
+    transition: 0.6s;
 }
 
 .main__welcome_h1{
 font-size: 72px;
-padding-top: 195px;
+padding-top: 195px; 
+
 /* font-family: ; FontAmazing -платный шрифт*/
 }
 
 .main__welcome_h4{
     font-size: 30px;
+ 
     /* font-family: ; FontAmazing -платный шрифт*/
 }
 
@@ -105,17 +115,15 @@ height: 500px;
     margin: 0px;
 }
 .main__gallery_width{
-    width: 400px;  
-      
+    width: 400px;        
 }
 
 .main__gallary_img-size{
    background-position:center center;
-   background-size: cover;
    height: 515px;
    width: 400px; 
+   overflow: hidden;
 }
-
 
 .main__gallery_h6{
     font-size: 24px;
